# LiteVecDB

./: README.md  pyproject.toml  setup.py
.github/workflows/: codeql.yml  test.yml
litevecdb/: __init__.py  core.py
tests/: test_core.py
